Adding the autoplay part1.

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <div class="piano__controls">
           <h4 class="piano__heading">Piano</h4>
           <label><input type="radio" class="piano__control__option" name="control" value="LetterNotes" checked>LetterNotes</label>
-          <label><input type="radio" class="piano__control__option" name="control" value="Keyboard">Keyboard</label>
+          <label><input type="radio" class="piano__control__option" name="control" value="keyboard">Keyboard</label>
           <label><input type="radio" class="piano__control__option" name="control" value="none">None</label>
         </div>
         <div class="piano__autoplay">
@@ -23,14 +23,14 @@
           <select class="piano__song-list">
             <option value="1">Jingle Bells</option>
             <option value="2" selected>Happy Birthday</option>
-          </select>
-          <label> Tempo: 
+          </select> &nbsp;&nbsp;&nbsp;&nbsp;
+          <label class="tempo"> Tempo: 
             <select class="piano__tempo">
               <option value="1">slow</option>
-              <option value="2">normal</option>
+              <option value="2" selected>normal</option>
               <option value="3">fast</option>
             </select>
-          </label>
+          </label> &nbsp; &nbsp;
           <button class="piano__play-btn">play</button>
         </div>
       </div>
